--- a/Calculator.Components/Calculator.Components.csproj
+++ b/Calculator.Components/Calculator.Components.csproj
@@ -113,6 +113,7 @@
       <DependentUpon>Fraction.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UiElementExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <SDKReference Include="WindowsDesktop, Version=10.0.10586.0">
