--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -41,6 +41,9 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>Calculator_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Square150x150Logo.scale-200.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="MaterialDesignColors, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.1.3\lib\net45\MaterialDesignColors.dll</HintPath>
@@ -48,6 +51,10 @@
     </Reference>
     <Reference Include="MaterialDesignThemes.Wpf, Version=2.1.0.657, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignThemes.2.1.0.657\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Windows.Shell, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Windows.Shell.3.0.1.0\lib\net40\Microsoft.Windows.Shell.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -70,6 +77,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ThemedWindow.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -78,15 +86,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ColorToBrushValueConverter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Ressources.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -126,6 +129,14 @@
       <Project>{edcaed3e-e410-48e4-b28c-b186c7f01251}</Project>
       <Name>Calculator.Controls</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Calculator.Keypad\Calculator.Keypad.csproj">
+      <Project>{20fe640a-a9a1-4759-9cd5-87402f2d9cd5}</Project>
+      <Name>Calculator.Keypad</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Calculator.Styling\Calculator.Styling.csproj">
+      <Project>{BD4112DD-6462-4A9C-8AD3-3548C145421C}</Project>
+      <Name>Calculator.Styling</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\LockScreenLogo.scale-200.png" />
@@ -135,14 +146,15 @@
     <Resource Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Resource Include="Assets\StoreLogo.png" />
     <Resource Include="Assets\Wide310x150Logo.scale-200.png" />
-    <Resource Include="Fonts\NotoSans-Bold.ttf" />
-    <Resource Include="Fonts\NotoSans-BoldItalic.ttf" />
-    <Resource Include="Fonts\NotoSans-Italic.ttf" />
-    <Resource Include="Fonts\NotoSans-Regular.ttf" />
-    <Resource Include="Fonts\NotoSansSymbols-Regular.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Square150x150Logo.scale-200.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Square150x150Logo.scale-200.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Square150x150Logo.scale-200.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
