--- a/Calculator.Styling/packages.config
+++ b/Calculator.Styling/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.1.0.657" targetFramework="net452" />
+  <package id="Microsoft.Windows.Shell" version="3.0.1.0" targetFramework="net452" />
 </packages>
