--- a/Calculator.Keypad/packages.config
+++ b/Calculator.Keypad/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FunctionalSharp.OptionTypes" version="0.9.2" targetFramework="net461" />
+  <package id="FunctionalSharp.PatternMatching" version="0.9.4" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.1.0.657" targetFramework="net461" />
+  <package id="MemBus" version="3.2.0" targetFramework="net461" />
+  <package id="System.Reactive" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net461" />
 </packages>
