--- a/Calculator.Keypad/Calculator.Keypad.csproj
+++ b/Calculator.Keypad/Calculator.Keypad.csproj
@@ -94,6 +94,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SetsDialog.xaml.cs">
+      <DependentUpon>SetsDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Translations.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Translations.resx</DependentUpon>
+    </Compile>
     <Compile Include="Keypad.xaml.cs">
       <DependentUpon>Keypad.xaml</DependentUpon>
     </Compile>
@@ -106,6 +114,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Keypad.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SetsDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -135,6 +147,13 @@
       <Project>{bd4112dd-6462-4a9c-8ad3-3548c145421c}</Project>
       <Name>Calculator.Styling</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Translations.de.resx" />
+    <EmbeddedResource Include="Translations.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Translations.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
