--- a/Calculator.Keypad/packages.config
+++ b/Calculator.Keypad/packages.config
@@ -4,6 +4,7 @@
   <package id="FunctionalSharp.PatternMatching" version="0.9.4" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.1.0.657" targetFramework="net461" />
+  <package id="MemBus" version="3.2.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net461" />
