--- a/Calculator.Messages/packages.config
+++ b/Calculator.Messages/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MemBus" version="3.2.0" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net452" />
   <package id="System.Collections" version="4.0.11" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net452" />
