--- a/Calculator/packages.config
+++ b/Calculator/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DryIoc" version="2.8.3" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.1.0.657" targetFramework="net461" />
+  <package id="MemBus" version="3.2.0" targetFramework="net461" />
   <package id="Microsoft.Windows.Shell" version="3.0.1.0" targetFramework="net461" />
+  <package id="Serilog" version="2.3.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Literate" version="2.0.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net461" />
