--- a/Calculator.Pages/packages.config
+++ b/Calculator.Pages/packages.config
@@ -3,4 +3,5 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.1.0.657" targetFramework="net461" />
   <package id="Microsoft.Windows.Shell" version="3.0.1.0" targetFramework="net461" />
+  <package id="Xamarin.Forms" version="2.2.0.45" targetFramework="net461" />
 </packages>
