--- a/Calculator.Pages/Calculator.Pages.csproj
+++ b/Calculator.Pages/Calculator.Pages.csproj
@@ -77,6 +77,7 @@
     <Compile Include="PathSampleCollection.cs" />
     <Compile Include="PathSampleCollectionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveTrainingSetCommand.cs" />
     <Compile Include="TrainingSetExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
