--- a/Calculator.Pages/Calculator.Pages.csproj
+++ b/Calculator.Pages/Calculator.Pages.csproj
@@ -67,11 +67,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharExtensions.cs" />
-    <Compile Include="GestureRecognizerTraining.xaml.cs">
-      <DependentUpon>GestureRecognizerTraining.xaml</DependentUpon>
+    <Compile Include="GestureTrainingFrame.xaml.cs">
+      <DependentUpon>GestureTrainingFrame.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="MainFrame.xaml.cs">
+      <DependentUpon>MainFrame.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ShellWindow.xaml.cs">
+      <DependentUpon>ShellWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="PathSample.cs" />
     <Compile Include="PathSampleCollection.cs" />
@@ -81,11 +84,23 @@
     <Compile Include="TrainingSetExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="GestureRecognizerTraining.xaml">
+    <Page Include="ShellWindow.Dictionary.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="GestureTrainingFrame.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="MainFrame.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ShellWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="GestureTrainingFrame.Dictionary.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
