--- a/Calculator.Pages/Calculator.Pages.csproj
+++ b/Calculator.Pages/Calculator.Pages.csproj
@@ -84,9 +84,15 @@
     <Compile Include="TrainingSetExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="MainFrame.Dictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <DependentUpon>MainFrame.xaml</DependentUpon>
+    </Page>
     <Page Include="ShellWindow.Dictionary.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+      <DependentUpon>ShellWindow.xaml</DependentUpon>
     </Page>
     <Page Include="GestureTrainingFrame.xaml">
       <SubType>Designer</SubType>
@@ -103,6 +109,7 @@
     <Page Include="GestureTrainingFrame.Dictionary.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+      <DependentUpon>GestureTrainingFrame.xaml</DependentUpon>
     </Page>
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
