--- a/Calculator.GestureRecognizer/Calculator.GestureRecognizer.csproj
+++ b/Calculator.GestureRecognizer/Calculator.GestureRecognizer.csproj
@@ -37,6 +37,9 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="Serilog">
+      <HintPath>..\packages\Serilog.2.3.0\lib\net46\Serilog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.AppContext, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.AppContext.4.1.0\lib\net46\System.AppContext.dll</HintPath>
@@ -143,6 +146,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stroke.cs" />
     <Compile Include="StrokeCollectionExtensions.cs" />
+    <Compile Include="StrokeConverter.cs" />
     <Compile Include="StrokeExtensions.cs" />
     <Compile Include="TrainingSet.cs" />
     <Compile Include="TrainingSetExtensions.cs" />
